# MCP_metabooks

./: .env.example  .gitignore  DEVELOPERS.md  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml
docs/: instalacao-mac.md
src/: constants.ts  index.ts  types.ts
src/metabooks_mcp/: client.py  server.py
src/metabooks_mcp/tools/: _files.py  capas.py  editora.py  indice.py  midia.py  produtos.py
src/metabooks_mcp/ui/: __init__.py  cover_app.html
src/schemas/: index.ts
src/services/: client.ts  credentials.ts  format.ts
src/tools/: index.ts
