[project]
name = "metabooks-mcp"
version = "2.0.1"
description = "MCP Server para a API REST v2 da Metabooks: metadados bibliográficos, capas, mídias e editoras."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["metabooks", "isbn", "bibliografico", "mcp", "ai", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
dependencies = [
    "httpx>=0.28.0",
    "mcp[cli]>=1.26.0",
    "python-dotenv>=1.2.0",
]

[project.scripts]
metabooks-mcp = "metabooks_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metabooks_mcp"]

[project.optional-dependencies]
dev = [
    "hatchling>=1.29.0",
]
